# euler-rs

./: .travis.yml  Cargo.toml  README.md
.builds/: beta.yml  lint.yml  nightly.yml  stable.yml
common/: Cargo.toml
common/src/: input.rs  lib.rs
common/src/format/: binary.rs
common/src/math/: factorial.rs  fibonacci.rs  mod.rs  palindrome.rs  prime.rs
problem_001/: Cargo.toml
problem_002/: Cargo.toml
problem_004/: Cargo.toml
problem_004/src/: main.rs
problem_005/: Cargo.toml
problem_006/: Cargo.toml
problem_007/: Cargo.toml
problem_007/src/: main.rs
problem_008/: Cargo.toml
problem_008/src/: main.rs
problem_009/: Cargo.toml
problem_009/src/: main.rs
problem_010/: Cargo.toml
problem_010/src/: main.rs
problem_019/: Cargo.toml
problem_019/src/: date.rs  main.rs
problem_035/: Cargo.toml
problem_035/src/: main.rs
problem_036/: Cargo.toml
problem_036/src/: main.rs
problem_1/: Cargo.toml
problem_1/src/: main.rs
problem_10/: Cargo.toml
problem_19/: Cargo.toml
problem_19/src/: date.rs  main.rs
problem_2/: Cargo.toml
problem_2/src/: main.rs
problem_4/: Cargo.toml
problem_4/src/: main.rs
problem_5/: Cargo.toml
problem_5/src/: main.rs
problem_6/: Cargo.toml
problem_6/src/: main.rs
problem_7/: Cargo.toml
